# Diffusion-PDE

./: .gitignore  CLAUDE.md  EXPERIENCE.md  MEMORY.md  MISSION.md  REPORT.md  SYMBOL.md  server_check.py  server_config.py  server_eval.py  server_gen.py  server_train.py  server_wait.py
Docs/: A-Nips-Diffussion - 快捷方式.lnk  REPORT.md  path_A_method_skeleton.md  多环境开发指南_从第一天就做对.md
Docs/black/: W5_code_review_20260501.md  W5_foundation_engineering_plan.md  diagram_design.md
Docs/proof/: Theorem 1 draft.md  Theorem 2 draft.md  Theorem 3 draft.md  Theorem 3 revised.md  Theorem 3 证明改进.md  Theorem 4 改进处.md  (+3 more)
PLAN/: E2_buckley_leverett_plan.md  W2_intro_relwork_plan.md  W2_method_plan.md  W3_sections_refine_plan.md  W4_experiment_code_plan.md
PROJECT/black/: .gitignore  README.md  REPORT.md  pyproject.toml  requirements.txt
PROJECT/black/config/: default.yaml  e3_euler_sod.yaml
PROJECT/black/configs/: e1_burgers.yaml  e2_buckley_leverett.yaml  env_config.yaml.example
PROJECT/black/scripts/: data_gen.py  eval.py  generate_data.py  sample.py  train.py  train_mvp.py
PROJECT/black/src/diffusion/: losses.py  samplers.py  schedules.py
PROJECT/black/src/entrodiff/: __init__.py
PROJECT/black/src/entrodiff/losses/: __init__.py  burgers_consistency.py  bv_reg.py  dsm.py  entropy_reg.py
PROJECT/black/src/entrodiff/models/: __init__.py  score_baseline.py  score_bvaware.py
PROJECT/black/src/entrodiff/pdes/: __init__.py  buckley_leverett.py  burgers.py  euler_sod.py
PROJECT/black/src/entrodiff/samplers/: __init__.py  godunov_guidance.py  reverse_ode.py
PROJECT/black/src/entrodiff/schedules/: __init__.py  viscosity_matched.py
PROJECT/black/src/entrodiff/utils/: __init__.py  io.py  metrics.py
PROJECT/black/src/models/: score_param.py  unet_1d.py
PROJECT/black/src/utils/: env_manager.py
PROJECT/black/tests/: __init__.py  test_pdes.py  test_samplers.py
server/: all_status.py  audit2.py  audit_files.py  check_all.py  check_bvaware.py  check_eval.py  check_foundation.py  check_keys.py  check_now.py  check_tmux.py  check_train_progress.py  check_w5_status.py  commit_user.py  debug_bv.py  debug_eval.py  debug_pde.py  deploy_full.py  deploy_nohup.py  deploy_w5.py  direct_eval.py  direct_eval2.py  dns_debug.py  err_check.py  eval_bv.py  eval_bv2.py  eval_e2.py  final_eval.py  final_eval2.py  final_eval_all.py  final_evals.py  find_ckpt.py  find_foundation.py  fix_config.py  fix_e2.py  fix_launch.py  full_eval.py  full_table.py  git_check.py  git_commit.py  git_push.py  (+45 more)
(+41 files in other folders)
