# ============================================================================
# pyproject.toml · EntroDiff
# ----------------------------------------------------------------------------
# 项目主代码包元数据 + 工具配置（black / ruff / mypy / pytest）。
# 安装：`pip install -e .`（开发模式）或 `pip install -e .[dev]`（含测试 / lint 工具）
# ============================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entrodiff"
version = "0.0.1"
description = "Shock-aware diffusion solvers for hyperbolic PDEs (NeurIPS 2026 submission)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anonymous (NeurIPS 2026 double-blind)" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 运行时硬依赖（精确版本写在 requirements.txt 中以便锁定）
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "torch>=2.2",
    "einops>=0.7",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "POT>=0.9",          # python-optimal-transport, 用于 W_1 / W_2 估计
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "black>=24.3",
    "mypy>=1.8",
    "ipykernel>=6.27",
    "jupyterlab>=4.0",
]
viz = [
    "seaborn>=0.13",
    "plotly>=5.18",
]

[project.urls]
Homepage = "https://github.com/anonymous/entrodiff"

# ----- setuptools 包发现 -----
[tool.setuptools.packages.find]
where = ["src"]

# ----- ruff 静态检查 -----
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "NPY", # numpy-specific
]
ignore = [
    "E501",   # line-too-long: 由 black 处理
    "E731",   # lambda 可读性: 物理 / 数学 lambda 常用
]

# ----- black 格式化 -----
[tool.black]
line-length = 100
target-version = ["py310"]

# ----- mypy 类型检查 -----
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

# ----- pytest -----
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
